@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <bonobo-config>
   <section path="main">
-    <entry name="right-to-left" type="boolean" value="0"/>
+    <entry name="right-to-left" type="ulong" value="0"/>
     <entry name="acceleration" type="ulong" value="3"/>
     <entry name="threshold" type="ulong" value="3"/>
   </section>
