@@ -1,5 +1,10 @@
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
+	* mouse-properties.xml: Change type of right-to-left to ulong
+
+	* mouse-properties-capplet.c (apply_settings): Use get_ulong
+	rather than get_boolean
+
 	* RELEASE : 1.5.2
 
 2001-07-25  Chema Celorio  <chema@celorio.com>
